steps management initial

--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -1,3 +1,4 @@
+<div class="tab-pane" id="date-time">
     <div class="row">
         <h4 class="info-text">Choose the appointment date and time</h4>
         <h4 class="info-text">Select Date</h4>
@@ -40,3 +41,4 @@
                 16:00</a>
         </div>
     </div>
+</div>
