--- a/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
+++ b/src/app/online-booking-module/components/appointmentstypes/appointmentstypes.component.html
@@ -1,3 +1,4 @@
+<div class="tab-pane" id="exam-type">
     <div class="row">
         <h4 class="info-text">Appointment Type</h4>
         <h4 class="info-text">Choose the appointment type that you would like to book
@@ -108,3 +109,4 @@
             </div>
         </div>
     </div>
+</div>
