--- a/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
+++ b/src/app/online-booking-module/components/appointmentsummary/appointmentsummary.component.html
@@ -1,4 +1,4 @@
-
+<div class="tab-pane" id="summary">
     <div class="row text-center">
         <h4 class="info-text">Appointment Confirmation Summary</h4>
         <h4 class="info-text">Thank you for booking an appointment with Eyemaxx, you
@@ -35,3 +35,4 @@
         <a href="www.eyemaxx.ca" class="btn btn-previous btn-fill btn-default btn-wd">Go
             back to homepage</a>
     </div>
+</div>
