--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -18,70 +18,75 @@
                 <!--      Wizard container        -->
                 <div class="wizard-container">
                     <div class="card wizard-card" data-color="red" id="wizard">
-                        <form action="" method="">
-                            <div class="wizard-header">
-                                <h3 class="wizard-title">
-                                    Book an Appointment with Eyemaxx Optical Studio
-                                </h3>
-                                <h5>Please follow the steps to book an appointment</h5>
-                            </div>
-                            <div class="wizard-navigation">
-                                <ul>
-                                    <li id="step1" [class.liDisabled]="!stepsEnabled(1)"><a href="#covid19"
-                                            data-toggle="tab">Step 1 (COVID19-Screening)</a>
-                                    </li>
-                                    <li id="step2" [class.liDisabled]="!stepsEnabled(2)"><a href="#appointment-type"
-                                            data-toggle="tab">Step 2 (Service
-                                            Type)</a></li>
-                                    <li id="step3"><a href="#exam-type" data-toggle="tab">Step 3 (Appointment Type)</a>
-                                    </li>
-                                    <li id="step4"><a href="#date-time" data-toggle="tab">Step 4 (Date & Time)</a></li>
-                                    <li id="step5"><a href="#optician-appointment" data-toggle="tab">Step 5 (Optician
-                                            Appointment)</a></li>
-                                    <li id="step6"><a href="#confirm" data-toggle="tab">Step 6 (Confirmation)</a></li>
-                                    <li id="step7"><a href="#summary" data-toggle="tab">Step 7 (Summary)</a></li>
-                                </ul>
-                            </div>
+                        <div class="wizard-header">
+                            <h3 class="wizard-title">
+                                Book an Appointment with Eyemaxx Optical Studio
+                            </h3>
+                            <h5>Please follow the steps to book an appointment</h5>
+                        </div>
+                        <div class="wizard-navigation">
+                            <ul>
+                                <li id="step1" [class.liDisabled]="!stepsEnabled(1)" (click)="navigate(1)"><a
+                                        href="#covid19" data-toggle="tab">Step 1 (COVID19-Screening)</a>
+                                </li>
+                                <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
+                                        href="#appointment-type" data-toggle="tab">Step 2 (Service Type)</a></li>
+                                <li id="step3" (click)="navigate(3)"><a href="#exam-type" data-toggle="tab">Step 3
+                                        (Appointment Type)</a>
+                                </li>
+                                <li id="step4" (click)="navigate(4)"><a href="#date-time" data-toggle="tab">Step 4 (Date
+                                        & Time)</a></li>
+                                <li id="step5" (click)="navigate(5)"><a href="#optician-appointment"
+                                        data-toggle="tab">Step 5 (Optician
+                                        Appointment)</a></li>
+                                <li id="step6" (click)="navigate(6)"><a href="#confirm" data-toggle="tab">Step 6
+                                        (Confirmation)</a></li>
+                                <li id="step7" (click)="navigate(7)"><a href="#summary" data-toggle="tab">Step 7
+                                        (Summary)</a></li>
+                            </ul>
+                        </div>
 
-                            <div class="tab-content">
-                                <div class="tab-pane" id="covid19">
-                                    <app-covid-pre-screening *ngIf="stepsEnabled(1)"></app-covid-pre-screening>
-                                </div>
-                                <div class="tab-pane" id="appointment-type">
-                                    <app-optimitrist-optician-selection *ngIf="stepsEnabled(2)">
-                                    </app-optimitrist-optician-selection>
-                                </div>
-                                <div class="tab-pane" id="exam-type">
-                                    <app-appointmentstypes></app-appointmentstypes>
-                                </div>
-                                <div class="tab-pane" id="date-time">
-                                    <app-appointmentsluts></app-appointmentsluts>
-                                </div>
-                                <div class="tab-pane" id="optician-appointment">
-                                    <app-opticianappointment></app-opticianappointment>
-                                </div>
-                                <div class="tab-pane" id="confirm">
-                                    <app-appointmentconfirmation></app-appointmentconfirmation>
-                                </div>
-                                <div class="tab-pane" id="summary">
-                                    <app-appointmentsummary></app-appointmentsummary>
-                                </div>
-
+                        <div class="tab-content">
+                            <router-outlet></router-outlet>
+                        </div>
+                        <!-- <div class="wizard-footer" *ngIf="currentStepStatus().validated">
+                            <div class="pull-right">
+                                <input type='button' class='btn btn-next btn-fill btn-danger btn-wd' name='next' (click)="navigate(currentStepStatus().order+1)"
+                                    value='Next' />
+                                <input type='button' class='btn btn-finish btn-fill btn-danger btn-wd' name='finish'
+                                    value='Finish' />
                             </div>
-                            <div class="wizard-footer">
-                                <div class="pull-right">
-                                    <input type='button' class='btn btn-next btn-fill btn-danger btn-wd' name='next'
-                                        value='Next' />
-                                    <input type='button' class='btn btn-finish btn-fill btn-danger btn-wd' name='finish'
-                                        value='Finish' />
-                                </div>
-                                <div class="pull-left">
-                                    <input type='button' class='btn btn-previous btn-fill btn-default btn-wd'
-                                        name='previous' value='Previous' />
-                                </div>
-                                <div class="clearfix"></div>
+                            <div class="pull-left" *ngIf="currentStepStatus().order != 1">
+                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd' 
+                                    name='previous' value='Previous' />
                             </div>
-                        </form>
+                            <div class="clearfix"></div>
+                        </div> -->
+                        <!-- <div class="wizard-footer" >
+                            <div class="pull-right">
+                                <input type='button' class='btn btn-next btn-fill btn-danger btn-wd' name='next'
+                                    value='Next' />
+                                <input type='button' class='btn btn-finish btn-fill btn-danger btn-wd' name='finish'
+                                    value='Finish' />
+                            </div>
+                            <div class="pull-left">
+                                <input type='button' class='btn btn-previous btn-fill btn-default btn-wd' 
+                                    name='previous' value='Previous' />
+                            </div>
+                            <div class="clearfix"></div>
+                        </div> -->
+                        <div class="wizard-footer">
+                            <div class="pull-right">
+                                <button type='button' class='btn btn-next btn-fill btn-danger btn-wd'
+                                    (click)="navigate(currentStepStatus().order+1)">Next</button>
+                                <button type='button' class='btn btn-finish btn-fill btn-danger btn-wd'>Finish</button>
+                            </div>
+                            <div class="pull-left" *ngIf="currentStepStatus().order != 1">
+                                <button type='button'
+                                    class='btn btn-previous btn-fill btn-default btn-wd'>Previous</button>
+                            </div>
+                            <div class="clearfix"></div>
+                        </div>
                     </div>
                 </div>
                 <!-- wizard container -->
