--- a/src/app/online-booking-module/components/base-content/base-content.component.html
+++ b/src/app/online-booking-module/components/base-content/base-content.component.html
@@ -29,23 +29,22 @@
                                 <li id="step1" [class.liDisabled]="!stepsEnabled(1)" (click)="navigate(1)"><a
                                         href="#covid19" data-toggle="tab">Step 1 (COVID19-Screening)</a>
                                 </li>
-                                <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
-                                        href="#appointment-type" data-toggle="tab">Step 2 (Service Type)</a></li>
-                                <li id="step3" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
-                                        href="#exam-type" data-toggle="tab">Step 3
+                                <!-- <li id="step2" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
+                                        href="#appointment-type" data-toggle="tab">Step 2 (Service Type)</a></li> -->
+                                <li id="step3" [class.liDisabled]="!stepsEnabled(2)" (click)="navigate(2)"><a
+                                        href="#exam-type" data-toggle="tab">Step 2
                                         (Appointment Type)</a>
                                 </li>
-                                <li id="step4" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
-                                        href="#date-time" data-toggle="tab">Step 4 (Date
-                                        & Time)</a></li>
-                                <li id="step5" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
-                                        href="#optician-appointment" data-toggle="tab">Step 5 (Optician
+                                <li id="step4" [class.liDisabled]="!stepsEnabled(3)" (click)="navigate(3)"><a
+                                        href="#date-time" data-toggle="tab">Step 3 (Date & Time)</a></li>
+                                <li id="step5" [class.liDisabled]="!stepsEnabled(4)" (click)="navigate(4)"><a
+                                        href="#optician-appointment" data-toggle="tab">Step 4 (Optician
                                         Appointment)</a></li>
-                                <li id="step6" [class.liDisabled]="!stepsEnabled(6)" (click)="navigate(6)"><a
-                                        href="#confirm" data-toggle="tab">Step 6
+                                <li id="step6" [class.liDisabled]="!stepsEnabled(5)" (click)="navigate(5)"><a
+                                        href="#confirm" data-toggle="tab">Step 5
                                         (Confirmation)</a></li>
-                                <li id="step7" [class.liDisabled]="!stepsEnabled(7)" (click)="navigate(7)"><a
-                                        href="#summary" data-toggle="tab">Step 7
+                                <li id="step7" [class.liDisabled]="!stepsEnabled(6)" (click)="navigate(6)"><a
+                                        href="#summary" data-toggle="tab">Step 6
                                         (Summary)</a></li>
                             </ul>
                         </div>
@@ -87,8 +86,8 @@
                                 <button type='button' class='btn btn-finish btn-fill btn-danger btn-wd'>Finish</button>
                             </div>
                             <div class="pull-left" *ngIf="currentStepStatus().order != 1">
-                                <button type='button'
-                                    class='btn btn-previous btn-fill btn-default btn-wd'>Previous</button>
+                                <button type='button' class='btn btn-previous btn-fill btn-default btn-wd'
+                                    (click)="navigate(currentStepStatus().order-1)">Previous</button>
                             </div>
                             <div class="clearfix"></div>
                         </div>
