--- a/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
+++ b/src/app/online-booking-module/components/appointmentsluts/appointmentsluts.component.html
@@ -2,15 +2,16 @@
     <div class="row">
         <h4 class="info-text">Choose the appointment date and time</h4>
         <h4 class="info-text">Select Date</h4>
-        <div class="col-sm-1">
+        <div class="col-sm-3">
         </div>
-        <div class="col-sm-5">
+        <!-- <div class="col-sm-5">
             <img src="../../../../assets/img/1.PNG" width="100%" height="100%">
-        </div>
+        </div> -->
         <div class="col-sm-5">
-            <img src="../../../../assets/img/2.PNG" width="100%" height="100%">
+            <p-calendar [(ngModel)]="SelectedDate" [inline]="true" [showWeek]="true" [numberOfMonths]="2" [minDate]="MinDate" [maxDate]="MaxDate">
+            </p-calendar>
         </div>
-        <div class="col-sm-1">
+        <div class="col-sm-3">
         </div>
     </div>
 
